# bm25-vectorizer

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: bm25_token_indexer.rs  bm25_tokenizer.rs  bm25_vectorizer.rs  example.rs  lib.rs  mocking.rs
