[package]
name = "bm25-vectorizer"
description = "A minimal Rust library for creating sparse vector representations (embeddings) using the BM25 algorithm for information retrieval."
repository = "https://github.com/ep9io/bm25-vectorizer"
license = "MIT"
version = "1.0.0"
edition = "2018"
keywords = ["bm25", "sparse", "embed", "search", "nlp"]
categories = ["text-processing"]

[features]
parallelism = ["dep:rayon"]

[dependencies]
thiserror = "2.0.17"
rayon = { version = "1.11.0", optional = true }
