[package]
name = "bm25-vectorizer"
description = "A minimal Rust library for creating sparse vector representations (embeddings) using the BM25 algorithm for information retrieval."
repository = "https://github.com/ep9io/bm25-vectorizer"
authors = ["Tristan Everitt"]
license = "MIT"
version = "1.0.0"
edition = "2021"
readme = "README.md"
keywords = ["bm25", "sparse", "embed", "search", "nlp"]
categories = ["text-processing"]

[features]
parallelism = ["dep:rayon"]

[dependencies]
thiserror = "2.0.17"
rayon = { version = "1.11.0", optional = true }

[dev-dependencies]
unicode-segmentation = "1.12.0"
stop-words = { version = "0.9.0", features = ["nltk"] }
rust-stemmers = "1.2.0"
deunicode = "1.6.2"
hash32 = "1.0.0"
regex = "1.11.3"
lazy_static = "1.5.0"
